--- a/public/html/admindashboard.html
+++ b/public/html/admindashboard.html
@@ -38,7 +38,7 @@
       <form id="addUserForm" action="/addUser" method="post">
         <input type="text" name="fname" placeholder="First Name" id="addFirstName" required>
         <input type="text" name="lname" placeholder="Last Name" id="addLastName" required>
-        <input type="text" name="email" placeholder="Email" id="addEmail" required>
+        <input type="email" name="email" placeholder="Email" id="addEmail" required>
         <input type="text" name="password" placeholder="Password" id="addPassword" required>
         <input type="text" name="username" placeholder="Username" id="addUserName" required>
         <select name="role" id="addRole" required>
